--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
-    <div class="background">
+    <div id="vanta-fog" class="background">
       <div class="content">
-        <h1 class="title">Welcome to My Webpage</h1>
-        <p class="tagline">Your tagline goes here.</p>
+        <h1 class="title">How to be a real programmer.</h1>
+        <p class="tagline">
+          Watch tutorials, write code, use cool tools and things others have
+          made in creative and new ways
+        </p>
       </div>
     </div>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanta@0.5.23/dist/vanta.fog.min.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
