fixed page title

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Webpage</title>
+    <title>How to be a real programmer</title>
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
