--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
   </head>
   <body>
-    <div id="vanta-fog" class="background">
+    <div id="vanta-dots" class="background">
       <div class="content">
         <h1 class="title">How to be a real programmer.</h1>
         <p class="tagline">
@@ -15,8 +15,9 @@
       </div>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@0.5.23/dist/vanta.fog.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vanta@0.5.23/dist/vanta.dots.min.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
