--- a/index.html
+++ b/index.html
@@ -7,14 +7,16 @@
   <body>
     <div id="vanta-dots" class="background">
       <div class="content">
-        <h1 class="title">How to be a real programmer.</h1>
+        <h1 class="title">How to be a real programmer</h1>
         <p class="tagline">
           Watch tutorials, write code, use cool tools and things others have
           made in creative and new ways
         </p>
       </div>
     </div>
-
+    <div class="bottom-bar">
+      <p>Made by Dan</p>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@0.5.23/dist/vanta.dots.min.js"></script>
     <script src="app.js"></script>
