--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       </div>
     </div>
     <div class="bottom-bar">
-      <p>Made by Dan</p>
+      <div class="copywrite-container">
+        <p class="copywrite">Made by Dan van der Starre &copy; 2023</p>
+      </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vanta@0.5.23/dist/vanta.dots.min.js"></script>
