--- a/index.html
+++ b/index.html
@@ -9,14 +9,22 @@
       <div class="content">
         <h1 class="title">How to be a real programmer</h1>
         <p class="tagline">
-          Watch tutorials, write code, use cool tools and things others have
-          made in creative and new ways
+          Watch tutorials, write code, use cool things </p>
         </p>
-      </div>
-    </div>
-    <div class="bottom-bar">
-      <div class="copywrite-container">
-        <p class="copywrite">Made by Dan van der Starre &copy; 2023</p>
+        <p class="tagline">others have made in creative and new ways</p>
+        <div class="bottom-bar">
+          <div class="left-content">
+            <p class="credit">
+              Made with
+              <a href="https://vantajs.com" target="_blank">Vanta.js</a> and
+              <a href="https://openai.com" target="_blank">ChatGPT</a>
+            </p>
+          </div>
+
+          <div class="copywrite-container">
+            <p class="copywrite">Made by Dan van der Starre &copy; 2023</p>
+          </div>
+        </div>
       </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
